--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -766,9 +766,16 @@ input {
 
 h1, .contact-heading{
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
     color: #1f1e1e;
     letter-spacing: 1px;
+}
+
+/*For Desktop*/
+@media screen and (min-width: 990px){
+h1, .contact-heading{
+    padding-top: 10%;
+}
 }
 
 .contact-btn-container{
