--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -849,6 +849,60 @@ h1, .contact-heading{
     color: #ffff;
 }
 
+/* ----------------------------------------UI Page */
+.ui-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.ui-img {
+    width: 100%
+}
+
+
+h1, .ui-heading{
+    color: #1f1e1e;
+    letter-spacing: 1px;
+    font-size: 24px;
+    text-align: center;
+}
+
+h2, .ui-subheading{
+    padding-left: 0px;
+    color: #1f1e1e;
+    letter-spacing: 1px;
+    text-align: center;
+    justify-content: center;
+}
+
+/*For Desktop*/
+@media screen and (min-width: 990px){
+h2, .ui-subheading{
+    text-align: left;
+}
+}
+@media screen and (min-width: 768px){
+.ui-content {
+    padding-top: 20%;
+}}
+
+.ui-text{
+    text-align: center;
+    padding-bottom: 0px;
+}
+
+/*For Desktop*/
+@media screen and (min-width: 990px){
+.ui-text{
+    text-align: left;
+}}
+
+.ui-row{
+    margin-top: 5%;
+}
+
 /* ----------------------------------------Hover.css */
 
 .hvr-sweep-to-bottom:before {
